[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/ui/PlayerTab_UI.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/popups/AddDicePopup.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/popups/AddItemPopup.gd" type="Script" id=3]
[ext_resource path="res://textures/ui/Button.png" type="Texture" id=4]
[ext_resource path="res://fonts/aliiewriting_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://textures/ui/Player1.png" type="Texture" id=6]
[ext_resource path="res://textures/ui/Heart .png" type="Texture" id=7]
[ext_resource path="res://fonts/alliewriting!.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://textures/ui/Add.png" type="Texture" id=9]
[ext_resource path="res://scripts/EnemyTimer.gd" type="Script" id=10]
[ext_resource path="res://textures/enemies/EnemyToken_small.png" type="Texture" id=11]
[ext_resource path="res://styles/button_style.tres" type="StyleBox" id=12]
[ext_resource path="res://textures/ui/Text.png" type="Texture" id=13]
[ext_resource path="res://scripts/ui/Dice_UI.gd" type="Script" id=14]
[ext_resource path="res://styles/button_style_disabled.tres" type="StyleBox" id=15]
[ext_resource path="res://scripts/ui/buttons/ButtonRemoveItem.gd" type="Script" id=16]
[ext_resource path="res://scripts/ui/Item_UI.gd" type="Script" id=17]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 48, 28, 466, 125 )
expand_margin_left = 30.0
expand_margin_right = 30.0
expand_margin_top = 15.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=4]
size = 20
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 70
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 70
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 13 )
region_rect = Rect2( 29, 25, 526, 339 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Tab_PlayerData" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PopupPanel" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PopupDice" type="AcceptDialog" parent="CanvasLayer/PopupPanel"]
margin_left = 159.0
margin_top = 182.0
margin_right = 314.0
margin_bottom = 252.0
window_title = "Dodaj kosc"
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PopupPanel/PopupDice"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 34.0

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/PopupPanel/PopupDice/MarginContainer"]
margin_right = 139.0
margin_bottom = 26.0
max_length = 4
context_menu_enabled = false
placeholder_text = "podaj znak i wartosc"

[node name="PopupItem" type="AcceptDialog" parent="CanvasLayer/PopupPanel"]
visible = true
margin_left = 159.0
margin_top = 182.0
margin_right = 314.0
margin_bottom = 252.0
window_title = "Dodaj przedmiot"
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PopupPanel/PopupItem"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 34.0

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/PopupPanel/PopupItem/MarginContainer"]
margin_right = 139.0
margin_bottom = 26.0
clip_text = true

[node name="PlayerData" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Playername" type="CenterContainer" parent="PlayerData"]
margin_right = 480.0
margin_bottom = 20.0

[node name="LabelPlayerName" type="Label" parent="PlayerData/Playername"]
margin_left = 182.0
margin_right = 297.0
margin_bottom = 20.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "fsdfsdfdsfsdfsd"
align = 1

[node name="PlayerMainCont" type="HBoxContainer" parent="PlayerData"]
editor/display_folded = true
margin_top = 24.0
margin_right = 480.0
margin_bottom = 184.0
alignment = 1

[node name="PlayerIconContainer" type="CenterContainer" parent="PlayerData/PlayerMainCont"]
margin_left = 115.0
margin_right = 275.0
margin_bottom = 160.0

[node name="TexturePlayer" type="TextureRect" parent="PlayerData/PlayerMainCont/PlayerIconContainer"]
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 6 )

[node name="PlayerHealthContainer" type="CenterContainer" parent="PlayerData/PlayerMainCont"]
margin_left = 279.0
margin_right = 365.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerData/PlayerMainCont/PlayerHealthContainer"]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 155.0

[node name="TextureRect" type="TextureRect" parent="PlayerData/PlayerMainCont/PlayerHealthContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 86.0
margin_bottom = 77.0
texture = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="PlayerData/PlayerMainCont/PlayerHealthContainer/VBoxContainer/TextureRect"]
margin_right = 81.0
margin_bottom = 85.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HpUi" type="Label" parent="PlayerData/PlayerMainCont/PlayerHealthContainer/VBoxContainer/TextureRect/CenterContainer"]
margin_left = 35.0
margin_top = 29.0
margin_right = 46.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"

[node name="AddHpButton" type="TextureButton" parent="PlayerData/PlayerMainCont/PlayerHealthContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 86.0
margin_bottom = 150.0
texture_normal = ExtResource( 9 )

[node name="PanelTimer" type="MarginContainer" parent="PlayerData"]
margin_top = 188.0
margin_right = 480.0
margin_bottom = 276.0
rect_min_size = Vector2( 480, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerData/PanelTimer"]
margin_right = 480.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="PlayerData/PanelTimer/HBoxContainer"]
margin_right = 238.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="LabelTimer" type="Label" parent="PlayerData/PanelTimer/HBoxContainer/CenterContainer"]
margin_left = 44.0
margin_right = 194.0
margin_bottom = 88.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "00:00"
align = 1

[node name="EnemyPowerTimer" type="Timer" parent="PlayerData/PanelTimer/HBoxContainer/CenterContainer/LabelTimer"]
script = ExtResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerData/PanelTimer/HBoxContainer"]
margin_left = 242.0
margin_right = 480.0
margin_bottom = 88.0
size_flags_horizontal = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PlayerData/PanelTimer/HBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 113.0
margin_bottom = 88.0

[node name="TextureRect" type="TextureRect" parent="PlayerData/PanelTimer/HBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 12.0
margin_right = 64.0
margin_bottom = 76.0
texture = ExtResource( 11 )

[node name="CenterContainer2" type="CenterContainer" parent="PlayerData/PanelTimer/HBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 189.0
margin_bottom = 88.0

[node name="EnemyPowerLabel" type="Label" parent="PlayerData/PanelTimer/HBoxContainer/HBoxContainer/CenterContainer2"]
margin_right = 72.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+0"

[node name="PlayerDicesContainer" type="VBoxContainer" parent="PlayerData"]
margin_top = 280.0
margin_right = 480.0
margin_bottom = 456.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerData/PlayerDicesContainer"]
margin_right = 480.0
margin_bottom = 20.0
custom_constants/separation = 22
alignment = 1

[node name="Label" type="Label" parent="PlayerData/PlayerDicesContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 204.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Kosci"
align = 1

[node name="ButtonAddDice" type="Button" parent="PlayerData/PlayerDicesContainer/HBoxContainer"]
margin_left = 226.0
margin_right = 311.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "dodaj nowa"

[node name="PanelC" type="PanelContainer" parent="PlayerData/PlayerDicesContainer"]
margin_top = 24.0
margin_right = 480.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="PlayerData/PlayerDicesContainer/PanelC"]
margin_right = 480.0
margin_bottom = 152.0
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerData/PlayerDicesContainer/PanelC/MarginContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 430.0
margin_bottom = 122.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="DirectDiceContainer" type="ItemList" parent="PlayerData/PlayerDicesContainer/PanelC/MarginContainer/ScrollContainer"]
margin_right = 380.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 6 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_columns = 6
same_column_width = true
script = ExtResource( 14 )

[node name="PlayerItemsContainer" type="VBoxContainer" parent="PlayerData"]
margin_top = 460.0
margin_right = 480.0
margin_bottom = 636.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerData/PlayerItemsContainer"]
margin_right = 480.0
margin_bottom = 20.0
custom_constants/separation = 31
alignment = 1

[node name="Label" type="Label" parent="PlayerData/PlayerItemsContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Przedmioty"
align = 1

[node name="ButtonAddItem" type="Button" parent="PlayerData/PlayerItemsContainer/HBoxContainer"]
margin_left = 221.0
margin_right = 303.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "dodaj nowy"

[node name="ButtonRemoveItem" type="Button" parent="PlayerData/PlayerItemsContainer/HBoxContainer"]
margin_left = 334.0
margin_right = 369.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0.505882, 0.505882, 0.505882, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "usun"
script = ExtResource( 16 )

[node name="PanelC2" type="PanelContainer" parent="PlayerData/PlayerItemsContainer"]
margin_top = 24.0
margin_right = 480.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="PlayerData/PlayerItemsContainer/PanelC2"]
margin_right = 480.0
margin_bottom = 152.0
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="PlayerData/PlayerItemsContainer/PanelC2/MarginContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 430.0
margin_bottom = 122.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="DirectItemContainer" type="ItemList" parent="PlayerData/PlayerItemsContainer/PanelC2/MarginContainer/ScrollContainer"]
margin_right = 380.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 7 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
same_column_width = true
script = ExtResource( 17 )

[node name="NavButtonsCont" type="HBoxContainer" parent="PlayerData"]
editor/display_folded = true
margin_top = 640.0
margin_right = 480.0
margin_bottom = 670.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 18
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PlayerData/NavButtonsCont"]
margin_left = 148.0
margin_right = 198.0
margin_bottom = 30.0

[node name="ButtonFightEnemy" type="Button" parent="PlayerData/NavButtonsCont/CenterContainer"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 25.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Walcz!"

[node name="CenterContainer2" type="CenterContainer" parent="PlayerData/NavButtonsCont"]
margin_left = 216.0
margin_right = 216.0
margin_bottom = 30.0

[node name="CenterContainer3" type="CenterContainer" parent="PlayerData/NavButtonsCont"]
margin_left = 234.0
margin_right = 331.0
margin_bottom = 30.0

[node name="ButtonEndTurn" type="Button" parent="PlayerData/NavButtonsCont/CenterContainer3"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 25.0
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zakoncz ture"

[node name="DummyThiccCont" type="MarginContainer" parent="PlayerData"]
margin_top = 674.0
margin_right = 480.0
margin_bottom = 684.0
rect_min_size = Vector2( 0, 10 )
[connection signal="confirmed" from="CanvasLayer/PopupPanel/PopupDice" to="CanvasLayer/PopupPanel/PopupDice" method="_on_PopupDice_confirmed"]
[connection signal="popup_hide" from="CanvasLayer/PopupPanel/PopupDice" to="CanvasLayer/PopupPanel/PopupDice" method="_on_PopupDice_popup_hide"]
[connection signal="confirmed" from="CanvasLayer/PopupPanel/PopupItem" to="CanvasLayer/PopupPanel/PopupItem" method="_on_PopupItem_confirmed"]
[connection signal="popup_hide" from="CanvasLayer/PopupPanel/PopupItem" to="CanvasLayer/PopupPanel/PopupItem" method="_on_PopupItem_popup_hide"]
[connection signal="pressed" from="PlayerData/PlayerMainCont/PlayerHealthContainer/VBoxContainer/AddHpButton" to="." method="_on_AddHpButton_pressed"]
[connection signal="time_has_passed" from="PlayerData/PanelTimer/HBoxContainer/CenterContainer/LabelTimer/EnemyPowerTimer" to="." method="_on_EnemyPowerTimer_time_has_passed"]
[connection signal="pressed" from="PlayerData/PlayerDicesContainer/HBoxContainer/ButtonAddDice" to="CanvasLayer/PopupPanel/PopupDice" method="_on_ButtonAddDice_pressed"]
[connection signal="pressed" from="PlayerData/PlayerItemsContainer/HBoxContainer/ButtonAddItem" to="CanvasLayer/PopupPanel/PopupItem" method="_on_ButtonAddItem_pressed"]
[connection signal="pressed" from="PlayerData/PlayerItemsContainer/HBoxContainer/ButtonRemoveItem" to="." method="_on_ButtonRemoveItem_pressed"]
[connection signal="pressed" from="PlayerData/PlayerItemsContainer/HBoxContainer/ButtonRemoveItem" to="PlayerData/PlayerItemsContainer/HBoxContainer/ButtonRemoveItem" method="_on_ButtonRemoveItem_pressed"]
[connection signal="item_selected" from="PlayerData/PlayerItemsContainer/PanelC2/MarginContainer/ScrollContainer/DirectItemContainer" to="PlayerData/PlayerItemsContainer/HBoxContainer/ButtonRemoveItem" method="_on_DirectItemContainer_item_selected"]
[connection signal="nothing_selected" from="PlayerData/PlayerItemsContainer/PanelC2/MarginContainer/ScrollContainer/DirectItemContainer" to="PlayerData/PlayerItemsContainer/HBoxContainer/ButtonRemoveItem" method="_on_DirectItemContainer_nothing_selected"]
[connection signal="pressed" from="PlayerData/NavButtonsCont/CenterContainer/ButtonFightEnemy" to="." method="_on_ButtonFightEnemy_pressed"]
[connection signal="pressed" from="PlayerData/NavButtonsCont/CenterContainer3/ButtonEndTurn" to="." method="_on_ButtonEndTurn_pressed"]
